# cmake_test_project

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
src/: main.cpp
